--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
     />
+    <base href="/playlist-coroa/">
     <link rel="stylesheet" href="/styles/style.css" />
     <link rel="stylesheet" href="/styles/animation.css" />
   </head>
