Ajuste da imagem e do som da previa.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
 
     <!-- Main -->
-    <main>
+    <main class="justify-content-center">
       <!-- Seção Hero com Vídeo -->
 <section class="hero-section background-gradient">
   <div class="container py-5 ">
@@ -53,7 +53,7 @@
 </section>
 
       <!-- Seção 2: Sobre as músicas -->
-      <section class="playlist-section ">
+      <section class="playlist-section">
         <div class="feature-list">
           <div class="tag-list" id="tag-list"></div>
           </div>
@@ -71,11 +71,11 @@
           <div class="preview-player">
             <h4 class="mb-4">🎧 Prévia da Playlist</h4>
             <div class="player-card">
-              <img src="/assets/img/img-cd.jpg" class="player-image" alt="Capa da música">
+              <img src="assets/img/img-cd.jpg" class="player-image" alt="Capa da música">
               <div>
                 <h6 class="mb-1">Playlist Dos Coroa</h6>
                 <audio controls class="w-100">
-                  <source src="/assets/media/music1.mp3" type="audio/mpeg" />
+                  <source src="assets/media/music1.mp3" type="audio/mpeg" />
                 </audio>
               </div>
             </div>
